index html change

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <script src='es6.pack.js'></script>
     </head>
     <body>
-        <p id="example"></p>
+        <p id="example">hi james</p>
     </body>
 </html>
